@@ -1019,7 +1019,7 @@ function ShowTemps()
           var xhtm=
                 '\t<div class="span4" id="' + item.idx + '">\n' +
                 '\t  <section>\n' +
-                '\t    <table id="itemtable" border="0" cellpadding="0" cellspacing="0">\n' +
+                '\t    <table id="itemtablenotype" border="0" cellpadding="0" cellspacing="0">\n' +
                 '\t    <tr>\n';
 					if (item.HaveTimeout==false) {			
 						xhtm+='\t      <td id="name">' + item.Name + '</td>\n';
@@ -1097,7 +1097,6 @@ function ShowTemps()
 					xhtm+=
 							'</td>\n' +
 							'\t      <td id="lastupdate">' + item.LastUpdate + '</td>\n' +
-							'\t      <td id="type">' + item.Type + ', ' + item.SubType + '</td>\n' +
 							'\t      <td>';
           if (item.Favorite == 0) {
             xhtm+=
